[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/deco/sign.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/font33_outline.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/Decorations/Sign.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 6 )

[node name="Sign" type="Node2D"]
script = ExtResource( 3 )
text = "hallo"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Text" type="RichTextLabel" parent="."]
visible = false
margin_left = -44.0
margin_top = -44.0
margin_right = 58.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]You can move thru walls with the \"dig\" key[/center]"
text = "You can move thru walls with the \"dig\" key"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout" flags=3]
